[tool.poetry]
name = "ptz-controller"
version = "0.2.0"
description = ""
authors = ["Vitalii <tomchyshakvitalik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.5"
PyQt5 = "^5.11.2"
numpy = "^1.24.4"
tk = "^0.1.0"
psutil = "^6.1.0"
cython = "^3.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
